# bulk-command-parser

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
bulk_server/include/bulk_server/: server.h  session.h
bulk_server/src/: main.cpp  server.cpp
libs/async/include/async/: async.h
libs/async/src/: async.cpp
libs/blockcontroller/: CMakeLists.txt
libs/blockcontroller/include/async/blockcontroller/: blockcontroller.h
libs/blockcontroller/src/: blockcontroller.cpp
libs/common/include/async/common/: blockingqueue.h
libs/consolelogger/: CMakeLists.txt  consolelogger.cpp
libs/consolelogger/include/async/consolelogger/: consoleworker.h
libs/consolelogger/src/: consoleworker.cpp
libs/defs/: block.h
libs/defs/include/async/defs/: block.h  command.h  timestamp.h
libs/dispatcher/include/async/dispatcher/: dispatcher.h
libs/dispatcher/src/: dispatcher.cpp
libs/filelogger/: CMakeLists.txt
libs/filelogger/include/async/filelogger/: filelogger.h  fileworker.h
libs/filelogger/src/: filelogger.cpp  fileworker.cpp
libs/sinks/include/async/sinks/: iblock_sink.h
src/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/blockcontroller/: CMakeLists.txt  blockcontroller.cpp  blockcontroller.h
src/libs/consolelogger/: CMakeLists.txt  consolelogger.h
src/libs/defs/: CMakeLists.txt
src/libs/filelogger/: CMakeLists.txt  filelogger.cpp  filelogger.h
src/libs/observer/: CMakeLists.txt  iobserver.h
